fixing mobile navbar missing color

--- a/Content/styles.css
+++ b/Content/styles.css
@@ -45,8 +45,13 @@ a {
 
 /* navbar styles */
 .navbar {
-    height: 70px;
     font-weight: 700;
+}
+
+@media only screen and (min-width:992px) {
+    .navbar {
+        height: 70px;
+    }
 }
 
     .navbar a {
